# cl-finetuning-experiments

./: .gitignore  README.md  pyproject.toml
docs/: FINDINGS.md  SETTING.md
docs/figures/: fisher_density.md  zone_convergence.md
experiments/: README.md
experiments/benchmark/: final_grid.py  frontier.py  hybrid_seeds.py  memory_window.py  stream_length.py
experiments/figures/: plot_grid.py
experiments/justification/: anchor_convergence.py  capacity_scaling.py  curvature_horizon.py  curvature_persistence.py  design_ablations.py  fisher_density.py  sensitivity.py  validate_fisher.py  zone_convergence.py
experiments/setup/: train_anchor.py  tune_methods.py
src/cl_experiments/: __init__.py  config.py  repro.py
src/cl_experiments/anchor/: __init__.py  train.py
src/cl_experiments/curvature/: __init__.py  fisher.py  sigma_init.py
src/cl_experiments/data/: __init__.py  permuted_mnist.py
src/cl_experiments/harness/: __init__.py  pipeline.py  run.py
src/cl_experiments/methods/: __init__.py  blr.py  learners.py  loops.py
src/cl_experiments/metrics/: __init__.py  cl_metrics.py  eval.py
src/cl_experiments/models/: __init__.py  mlp.py
tests/: conftest.py  test_package.py  test_repro.py
tests/anchor/: test_train.py
tests/curvature/: test_fisher.py  test_sigma_init.py
tests/harness/: test_pipeline.py  test_run.py
tests/methods/: test_blr.py  test_ewc.py
tests/metrics/: test_cl_metrics.py
