[project]
name = "cl-experiments"
version = "0.1.0"
description = "Experiments in continual learning and Bayesian optimization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Max", email = "max@abasis.ai" }]

dependencies = [
    # Numerics
    "numpy>=1.26",
    # Deep learning
    "torch>=2.2",
    "torchvision>=0.17",
    # Hyper-parameter tuning (per-method Optuna/TPE search in experiments/setup)
    "optuna>=3.6",
    # Figures
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cl_experiments"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
